# btop

./: .clang-tidy  CMakeLists.txt  meson.build
.github/workflows/: clang-format.yml  cmake-linux.yml  cmake-openbsd.yml  continuous-build-freebsd.yml  continuous-build-linux.yml  continuous-build-netbsd.yml  continuous-build-openbsd.yml
src/: bsd.cpp  btop.cpp  btop_cli.cpp  btop_cli.hpp  btop_shared.cpp  btop_shared.hpp  btop_tools.cpp  linux.cpp  meson.build  platform.cpp  platform.hpp
src/linux/: meson.build
subprojects/: .gitignore  widecharwidth.wrap
subprojects/packagefiles/widecharwidth/: meson.build
